Criação de (Create,Delete,Edit na aba Livro)

--- a/WebLibrary.View/Views/Shared/_Layout.cshtml
+++ b/WebLibrary.View/Views/Shared/_Layout.cshtml
@@ -26,7 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Cliente">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Livro" asp-action="Livro">Livros</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Livro" asp-action="Livro">Livro
+
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Emprestimo" asp-action="Emprestimo">Emprestimos</a>
