--- a/WebLibrary.View/Views/Livro/Livro.cshtml
+++ b/WebLibrary.View/Views/Livro/Livro.cshtml
@@ -51,7 +51,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
