--- a/WebLibrary.View/Views/Emprestimo/Edit.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Edit.cshtml
@@ -1,28 +1,26 @@
 ﻿@model WebLibrary.Model.LivroClienteEmprestimo
 
 @{
-    ViewData["Title"] = "Criar";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Cadastrar empréstimo</h1>
+<h1>Editar</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="IdLivro" class="control-label"></label>
-                <select asp-for="IdLivro" class ="form-control" asp-items="ViewBag.IdLivro"></select>
+                <select asp-for="IdLivro" class="form-control" asp-items="ViewBag.IdLivro"></select>
+                <span asp-validation-for="IdLivro" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdCliente" class="control-label"></label>
-                <select asp-for="IdCliente" class ="form-control" asp-items="ViewBag.IdCliente"></select>
+                <select asp-for="IdCliente" class="form-control" asp-items="ViewBag.IdCliente"></select>
+                <span asp-validation-for="IdCliente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DataEmprestimo" class="control-label"></label>
@@ -36,14 +34,14 @@
             </div>
             <br/>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-<br/>
+
 <div>
-    <a asp-action="Index">Voltar para a lista</a>
+    <a asp-action="Emprestimo">Voltar para a lista</a>
 </div>
 
 @section Scripts {
