--- a/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
@@ -22,10 +22,10 @@
                 @Html.DisplayNameFor(model => model.DataDevolucao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdClienteNavigation)
+                @Html.DisplayNameFor(model => model.IdCliente)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdLivroNavigation)
+                @Html.DisplayNameFor(model => model.IdLivro)
             </th>
             <th></th>
         </tr>
@@ -43,10 +43,10 @@
                 @Html.DisplayFor(modelItem => item.DataDevolucao)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdClienteNavigation.Bairro)
+                @Html.DisplayFor(modelItem => item.IdCliente)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdLivroNavigation.Autor)
+                @Html.DisplayFor(modelItem => item.IdLivro)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
