--- a/WebLibrary.View/Views/Emprestimo/Delete.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Delete.cshtml
@@ -26,13 +26,13 @@
             @Html.DisplayNameFor(model => model.IdCliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdClienteNavigation.Bairro)
+            @Html.DisplayFor(model => model.IdCliente)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdLivro)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdLivroNavigation.Autor)
+            @Html.DisplayFor(model => model.IdLivro)
         </dd>
     </dl>
     <br/>
