--- a/WebLibrary.View/Views/Emprestimo/Details.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Details.cshtml
@@ -25,13 +25,13 @@
             @Html.DisplayNameFor(model => model.IdCliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdCliente)
+            @Html.DisplayFor(model => model.IdClienteNavigation.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdLivro)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdLivro)
+            @Html.DisplayFor(model => model.IdLivroNavigation.Nome)
         </dd>
     </dl>
 </div>
