--- a/WebLibrary.View/Views/Emprestimo/Edit.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Edit.cshtml
@@ -14,12 +14,12 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="IdLivro" class="control-label"></label>
-                <select asp-for="IdLivro" class="form-control" asp-items="ViewBag.IdLivro"></select>
+                <select asp-for="IdLivro" class="form-control" asp-items="ViewBag.Livro"></select>
                 <span asp-validation-for="IdLivro" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdCliente" class="control-label"></label>
-                <select asp-for="IdCliente" class="form-control" asp-items="ViewBag.IdCliente"></select>
+                <select asp-for="IdCliente" class="form-control" asp-items="ViewBag.Cliente"></select>
                 <span asp-validation-for="IdCliente" class="text-danger"></span>
             </div>
             <div class="form-group">
