Criação de Details/delete

--- a/WebLibrary.View/Views/Livro/Livro.cshtml
+++ b/WebLibrary.View/Views/Livro/Livro.cshtml
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Emprestado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Alterar</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
             </td>
         </tr>
 }
