--- a/WebLibrary.View/Views/Livro/Create.cshtml
+++ b/WebLibrary.View/Views/Livro/Create.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Livro">Voltar para a lista</a>
 </div>
 
 @section Scripts {
