--- a/WebLibrary.View/Views/Livro/Delete.cshtml
+++ b/WebLibrary.View/Views/Livro/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h1>Tem certeza que deseja excluir este livro de sua biblioteca?</h1>
 <div>
-    <h4>Livro</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -39,7 +38,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
+        <a asp-action="Livro">Voltar para Lista </a>
+     
     </form>
 </div>
