--- a/WebLibrary.View/Views/Livro/Details.cshtml
+++ b/WebLibrary.View/Views/Livro/Details.cshtml
@@ -10,25 +10,33 @@
     <h4>Livro</h4>
     <hr />
     <dl class="row">
-       
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Nome)
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-       
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Autor)
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Autor)
         </dd>
-   
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Editora)
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Editora)
         </dd>
-    
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Emprestado)
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Emprestado)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Alterar</a> |
+    <a asp-action="Livro">Voltar para lista</a>
 </div>
