--- a/WebLibrary.View/Views/Livro/Edit.cshtml
+++ b/WebLibrary.View/Views/Livro/Edit.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Livro">Voltar para lista</a>
 </div>
 
 @section Scripts {
