Tratamento de inclusão de cliente [para evitar cpf repetido]

--- a/WebLibrary.View/Views/Cliente/Create.cshtml
+++ b/WebLibrary.View/Views/Cliente/Create.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Lista de Clientes</a>
+    <a asp-action="Cliente">Lista de Clientes</a>
 </div>
 
 @section Scripts {
