Estilização do cabeçalho geral e das páginas relacionadas as páginas de empréstimo

--- a/WebLibrary.View/Views/Emprestimo/Create.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Create.cshtml
@@ -32,13 +32,10 @@
             <br/>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="Emprestimo">Voltar para a lista</a>
             </div>
         </form>
     </div>
-</div>
-<br/>
-<div>
-    <a asp-action="Emprestimo">Voltar para a lista</a>
 </div>
 
 @section Scripts {
