--- a/WebLibrary.View/Views/Emprestimo/Delete.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Delete.cshtml
@@ -26,19 +26,19 @@
             @Html.DisplayNameFor(model => model.IdCliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdCliente)
+            @Html.DisplayFor(model => model.IdClienteNavigation.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdLivro)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdLivro)
+            @Html.DisplayFor(model => model.IdLivroNavigation.Nome)
         </dd>
     </dl>
     <br/>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Emprestimo">Voltar para a lista</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" />
+        <a class="btn btn-primary" asp-action="Emprestimo">Voltar para a lista</a>
     </form>
 </div>
