--- a/WebLibrary.View/Views/Emprestimo/Details.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Details.cshtml
@@ -37,6 +37,6 @@
 </div>
 <br/>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Emprestimo">Voltar para a lista</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a>
+    <a class="btn btn-primary" asp-action="Emprestimo">Voltar para a lista</a>
 </div>
