--- a/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
@@ -7,10 +7,10 @@
 <h1>Lista de Emprestimos</h1>
 
 <p>
-    <a asp-action="Create">Criar Novo</a>
+    <a class="btn btn-primary"asp-action="Create">Criar Novo</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover ">
+    <thead class="table-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Id)
@@ -22,10 +22,12 @@
                 @Html.DisplayNameFor(model => model.DataDevolucao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdClienteNavigation.Nome)
+                @*@Html.DisplayNameFor(model => model.IdClienteNavigation.Nome)*@
+                Cliente
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdLivroNavigation.Nome)
+                @*@Html.DisplayNameFor(model => model.IdLivroNavigation.Nome)*@
+                Livro
             </th>
             <th></th>
         </tr>
@@ -49,9 +51,11 @@
                 @Html.DisplayFor(modelItem => item.IdLivroNavigation.Nome)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                <div class="btn-group">
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
+                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                </div>
             </td>
         </tr>
 }
