Update (estilização das telas de livro e emprestimo)

--- a/WebLibrary.View/Views/Cliente/Delete.cshtml
+++ b/WebLibrary.View/Views/Cliente/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Cliente">Back to List</a>
+        <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
     </form>
 </div>
