--- a/WebLibrary.View/Views/Cliente/Details.cshtml
+++ b/WebLibrary.View/Views/Cliente/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Cliente">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
 </div>
