--- a/WebLibrary.View/Views/Cliente/Cliente.cshtml
+++ b/WebLibrary.View/Views/Cliente/Cliente.cshtml
@@ -7,10 +7,10 @@
 <h1>Lista de Clientes</h1>
 
 <p>
-    <a asp-action="Create">Criar Novo</a>
+    <a class = "btn btn-primary" asp-action="Create">Criar Novo</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover ">
+    <thead class="table-dark">
         <tr><!--Adicionei aqui-->
             <th>
                 @Html.DisplayNameFor(model => model.Id)
@@ -55,9 +55,11 @@
                 @Html.DisplayFor(modelItem => item.Bairro)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                <div class="btn-group">
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
+                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                </div>
             </td>
         </tr>
 }
