--- a/WebLibrary.View/Views/Cliente/Create.cshtml
+++ b/WebLibrary.View/Views/Cliente/Create.cshtml
@@ -39,13 +39,10 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Cliente">Lista de Clientes</a>
 </div>
 
 @section Scripts {
