--- a/WebLibrary.View/Views/Cliente/Edit.cshtml
+++ b/WebLibrary.View/Views/Cliente/Edit.cshtml
@@ -40,13 +40,10 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Cliente">Back to List</a>
 </div>
 
 @section Scripts {
