--- a/WebLibrary.View/Views/Livro/Create.cshtml
+++ b/WebLibrary.View/Views/Livro/Create.cshtml
@@ -34,15 +34,11 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="Livro">Voltar para a lista</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Livro">Voltar para a lista</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
