--- a/WebLibrary.View/Views/Livro/Delete.cshtml
+++ b/WebLibrary.View/Views/Livro/Delete.cshtml
@@ -39,7 +39,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Excluir" class="btn btn-danger" /> |
-        <a asp-action="Livro">Voltar para Lista </a>
+        <a class="btn btn-primary" asp-action="Livro">Voltar para Lista </a>
      
     </form>
 </div>
