--- a/WebLibrary.View/Views/Livro/Details.cshtml
+++ b/WebLibrary.View/Views/Livro/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Alterar</a> |
-    <a asp-action="Livro">Voltar para lista</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Alterar</a> |
+    <a class="btn btn-primary" asp-action="Livro">Voltar para lista</a>
 </div>
