--- a/WebLibrary.View/Views/Livro/Edit.cshtml
+++ b/WebLibrary.View/Views/Livro/Edit.cshtml
@@ -35,13 +35,10 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-action="Livro">Voltar para lista</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Livro">Voltar para lista</a>
 </div>
 
 @section Scripts {
