--- a/WebLibrary.View/Views/Livro/Livro.cshtml
+++ b/WebLibrary.View/Views/Livro/Livro.cshtml
@@ -7,10 +7,10 @@
 <h1>Lista de Livros</h1>
 
 <p>
-    <a asp-action="Create">Criar Novo</a>
+    <a class="btn btn-primary" asp-action="Create">Criar Novo</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover">
+    <thead class="table-dark">
         <tr><!--Adicionei aqui-->
             <th>
                 @Html.DisplayNameFor(model => model.Id)
@@ -48,10 +48,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Emprestado)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Alterar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
+            <td><div class="btn-group">
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
+                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                </div>
             </td>
         </tr>
 }
