Alterações para impedir o usuário de pegar emprestado um livro que já está emprestado

--- a/WebLibrary.View/Views/Emprestimo/Create.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Create.cshtml
@@ -24,11 +24,11 @@
                 <input asp-for="DataEmprestimo" class="form-control" />
                 <span asp-validation-for="DataEmprestimo" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="DataDevolucao" class="control-label"></label>
                 <input asp-for="DataDevolucao" class="form-control" />
                 <span asp-validation-for="DataDevolucao" class="text-danger"></span>
-            </div>
+            </div>*@
             <br/>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
