--- a/WebLibrary.View/Views/Emprestimo/Edit.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Edit.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Data de devolução</label>
-                <input asp-for="DataDevolucao" class="form-control" />
+                <input id="devolucao" asp-for="DataDevolucao" class="form-control" />
                 <span asp-validation-for="DataDevolucao" class="text-danger"></span>
             </div>
             <br/>
