--- a/WebLibrary.View/Views/Livro/Create.cshtml
+++ b/WebLibrary.View/Views/Livro/Create.cshtml
@@ -29,11 +29,11 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Emprestado" /> @Html.DisplayNameFor(model => model.Emprestado)
+                    <input class="form-check-input" asp-for="Emprestado" disabled/> @Html.DisplayNameFor(model => model.Emprestado)
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary"/>
                 <a class="btn btn-primary" asp-action="Livro">Voltar para a lista</a>
             </div>
         </form>
