--- a/WebLibrary.View/Views/Livro/Edit.cshtml
+++ b/WebLibrary.View/Views/Livro/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Emprestado" /> @Html.DisplayNameFor(model => model.Emprestado)
+                    <input class="form-check-input" asp-for="Emprestado" disabled/> @Html.DisplayNameFor(model => model.Emprestado)
                 </label>
             </div>
             <div class="form-group">
