Correção do ultimo tratamento feito, adição de Display(Name) e tradução pro portugues de coisas que estavam em inglês

--- a/WebLibrary.View/Views/Livro/Delete.cshtml
+++ b/WebLibrary.View/Views/Livro/Delete.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<h1>Excluir cadastro</h1>
 
-
-<h1>Tem certeza que deseja excluir este livro de sua biblioteca?</h1>
+<h3>Tem certeza que deseja excluir este livro de sua biblioteca?</h3>
 <div>
     
     <hr />
