--- a/WebLibrary.View/Views/Cliente/Create.cshtml
+++ b/WebLibrary.View/Views/Cliente/Create.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Bairro" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
                 <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
             </div>
         </form>
