--- a/WebLibrary.View/Views/Cliente/Delete.cshtml
+++ b/WebLibrary.View/Views/Cliente/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Excluir cadastro</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3> Tem certeza que deseja excluir seu cadastro?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
         <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
     </form>
 </div>
