--- a/WebLibrary.View/Views/Cliente/Edit.cshtml
+++ b/WebLibrary.View/Views/Cliente/Edit.cshtml
@@ -39,7 +39,7 @@
                 <span asp-validation-for="Bairro" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a class="btn btn-primary" asp-action="Cliente">Voltar para a lista</a>
             </div>
         </form>
