--- a/WebLibrary.View/Views/Emprestimo/Delete.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Deletar";
 }
 
-<h1>Deletar</h1>
+<h1>Excluir emprestimo</h1>
 
-<h3>Tem certeza que quer apagar este registro?</h3>
+<h3>Tem certeza que quer Excluir este emprestimo?</h3>
 <div>
     <hr />
     <dl class="row">
@@ -38,7 +38,7 @@
     <br/>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" />
+        <input type="submit" value="Excluir" class="btn btn-danger" />
         <a class="btn btn-primary" asp-action="Emprestimo">Voltar para a lista</a>
     </form>
 </div>
