--- a/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
+++ b/WebLibrary.View/Views/Emprestimo/Emprestimo.cshtml
@@ -54,7 +54,7 @@
                 <div class="btn-group">
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
                     <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
-                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
                 </div>
             </td>
         </tr>
