--- a/WebLibrary.View/Views/Livro/Create.cshtml
+++ b/WebLibrary.View/Views/Livro/Create.cshtml
@@ -33,7 +33,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+                <input type="submit" value="Criar" class="btn btn-primary"/>
                 <a class="btn btn-primary" asp-action="Livro">Voltar para a lista</a>
             </div>
         </form>
