--- a/WebLibrary.View/Views/Livro/Edit.cshtml
+++ b/WebLibrary.View/Views/Livro/Edit.cshtml
@@ -34,7 +34,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a class="btn btn-primary" asp-action="Livro">Voltar para lista</a>
             </div>
         </form>
