--- a/WebLibrary.View/Views/Shared/_Layout.cshtml
+++ b/WebLibrary.View/Views/Shared/_Layout.cshtml
@@ -10,28 +10,28 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #212529">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Library" asp-action="Index">WebLibrary</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Library" asp-action="Index">WebLibrary</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Library" asp-action="Index">Home</a>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Library" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Cliente">Clientes</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cliente" asp-action="Cliente">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Livro" asp-action="Livro">Livro
+                            <a class="nav-link text-white" asp-area="" asp-controller="Livro" asp-action="Livro">Livro
 
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Emprestimo" asp-action="Emprestimo">Emprestimos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Emprestimo" asp-action="Emprestimo">Emprestimos</a>
                         </li>
                     </ul>
                 </div>
